# XFChess

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  AUTH_UNIFICATION_PLAN.md  Anchor.toml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT-GUIDE.md  DEPLOYMENT-STATUS.md  Dockerfile  ER_TESTING_GUIDE.md  LICENSE  Lichessorg API reference.json  MAGICBLOCK.md  OPERA_GAME_TEST_README.md  OPERA_TEST.md  P2P  PROJECT.md  README.md  RUNNING.md  SECURITY.md  backend.pid  backend_warnings.txt  backend_warnings_detailed.txt  braid_iroh_single.bat  build-wasm.bat  build-wasm.sh  build.rs  build_errors.txt  build_output.txt  compile_errors.txt  deploy-to-hetzner.sh  deploy_devnet.bat  deploy_magicblock_er.bat  deploy_output.txt  docker-compose.yml  (+56 more)
backend/: .dockerignore  .env  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  backend_errors.txt  build.rs  sessions.db  vault.db
backend/migrations/: 001_initial.sql  002_kyc_gdpr.sql  003_wallet_first_auth.sql  004_indexes_and_wal.sql  005_disputes.sql  006_game_history.sql  007_add_password_hash.sql  008_anticheat.sql  009_external_elo.sql  010_cacf_compliance.sql  011_friends.sql  012_perf_indexes.sql  013_move_telemetry.sql  014_think_time.sql  015_broadcast_delay.sql  016_account_linkage.sql  017_jwt_revocations.sql  018_puzzles.sql  019_job_queue.sql  020_casual_games_and_sponsorship.sql  021_active_sessions.sql  022_matchmaking_queue.sql  023_player_bans.sql  024_flagged_games.sql  20240101000000_create_schema.sql
backend/src/: README.md  api.rs  auth.rs  db.rs  error.rs  game.rs  lib.rs  main.rs  server.rs  signing_server.rs  signing_server_http.rs
backend/src/db/: README.md  mod.rs  repository.rs  schema.rs  sessions.rs
backend/src/infrastructure/: README.md  auth_middleware.rs  database.rs  mod.rs  ngrok.rs  router.rs  tasks.rs
backend/src/signing/: README.md  anticheat_enqueue.rs  auth.rs  auth_ws.rs  blinks.rs  blinks_anti_cheat.rs  blinks_chains.rs  blinks_funding.rs  blinks_onboarding.rs  blinks_pda.rs  cacf_compliance.rs  config.rs  elo_cache.rs  feepayer.rs  identity.rs  linkage.rs  mod.rs  p2p_relay.rs  pyth_oracle.rs  routes.rs  solana.rs  store.rs  tee_relayer.rs  tournament_gossip.rs  tournament_routes.rs  tournament_store.rs  ws_subscriber.rs
backend/src/tasks/: README.md  anticheat_worker.rs  archiver.rs  fee_claimer.rs  matchmaking.rs  mod.rs  queue.rs  settlement_worker.rs  tournament_scheduler.rs
backend/src/telemetry/: README.md  logging.rs  metrics.rs  middleware.rs  mod.rs  worker_metrics.rs
backend/src/tournament/: mod.rs  routes.rs  store.rs  swiss_engine.rs
backend/tests/: api_integration.rs  e2e_api.rs  e2e_rpc_live.rs  room_flow.rs
backend/tests/disabled/: swiss_integration_test.rs
crates/braid-core/: Cargo.toml
crates/braid-core/src/: lib.rs
crates/braid-http/: Cargo.toml
crates/braid-http/src/: client.rs  lib.rs  types.rs
crates/braid-iroh/: Cargo.toml  README.md
crates/braid-iroh/src/: discovery.rs  lib.rs  node.rs  protocol.rs  proxy.rs  subscription.rs  tournament.rs
crates/chess-logic-on-chain/: Cargo.toml
crates/chess-logic-on-chain/src/: lib.rs
crates/chess-logic-shared/: Cargo.toml
crates/chess-logic-shared/src/: lib.rs
crates/chess_engine/: Cargo.toml  README.md
crates/chess_engine/src/: api.rs  bitset.rs  board.rs  constants.rs  error.rs  evaluation.rs  hash.rs  lib.rs  move_gen.rs  search.rs  types.rs  utils.rs
crates/engine/nimzovich-uci/: Cargo.toml  README.md
crates/engine/nimzovich_engine/: Cargo.toml  README.md
crates/er-cu-benchmark/: Cargo.toml
crates/er-cu-benchmark/src/: cost_reporter.rs  cu_logger.rs  keygen.rs  lib.rs  moves.rs
crates/iroh-gossip/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
crates/iroh-gossip/src/: net.rs
crates/iroh-h3-axum/: Cargo.toml  README.md
crates/iroh-h3-client/: Cargo.toml  README.md
crates/networking/braid_uri/: Cargo.toml
crates/networking/iroh-h3/: Cargo.toml
crates/networking/xfchess-braid-server/: Cargo.toml
crates/shakmaty-host-vendored/: Cargo.toml
crates/shakmaty-no-std/: Cargo.toml
crates/shakmaty-no-std/src/: lib.rs
crates/shared/: Cargo.toml  README.md
crates/shared/backend-types/: Cargo.toml  README.md
crates/shared/shared/: Cargo.toml  README.md
crates/shared/src/: crdt.rs  game_state.rs  lib.rs  protocol.rs
crates/shared/swiss-pairing/: Cargo.toml  README.md
crates/shared/xfchess-anticheat/: Cargo.toml  README.md
crates/solana-chess-client/: Cargo.toml  README.md
crates/solana-chess-client/examples/: simulate_move.rs
crates/solana-chess-client/src/: lib.rs  rpc.rs  wallet.rs
crates/solana-contract-fuzzer/: Cargo.toml  fuzzer_results.txt  run_demo.bat
crates/solana-contract-fuzzer/src/: funding.rs  (+2 more)
crates/xfchess-ai-service/: Cargo.toml  README.md  ai-authority.json
crates/xfchess-anticheat/: Cargo.toml
programs/xfchess-game/: CLAUDE.md  Cargo.toml  README.md  build_error.txt  build_errors.txt  build_errors_2.txt  build_errors_3.txt  build_warnings.txt
tauri/: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  tauri.conf.json  tauri.windows.conf.json
tauri/capabilities/: admin-shell.json  default.json
tauri/docs/: TAURI_REMEDIATION.md
tauri/installer/: xfchess.nsi
tauri/macos/: entitlements.plist  package_macos.sh
tauri/src/: README.md  error.rs  main.rs
tauri/tournament-admin/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
tauri/viz/: README.md  index.html  package.json  vite.config.ts
tauri/wallet-popup/: index.html  popup.js  style.css
tauri/wallet-ui/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/: Cargo.toml  Trunk.toml  index.html
web/pkg/: xfchess_web.d.ts  xfchess_web.js  xfchess_web_bg.wasm.d.ts
web/src/: app.rs  bevy_wasm.rs  lib.rs  main.rs
web/tests/: web.rs
xfchess-wasm/: Cargo.toml
xfchess-wasm/pkg/: xfchess_wasm.js
xfchess-wasm/src/: app.rs  board_mode.rs  braid_wasm.rs  lib.rs
(+1514 files in other folders)
