[package]
name = "xfchess"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xfchess"
path = "src/main.rs"

[workspace]
members = [
    "crates/braid-blob",
    "crates/braid-core",
    "crates/braid-http",
    "crates/braid-iroh",
    "crates/braid_stockfish_ai",
    "crates/braid_uri",
    "crates/chess_engine",
    "crates/iroh-gossip",
    "crates/iroh-h3",
    "crates/iroh-h3-axum",
    "crates/iroh-h3-client",
    "crates/shared",
    "crates/solana-chess-client",
    "crates/xfchess-ai-service",
    "programs/xfchess-game",
]
resolver = "2"

[features]
default = ["solana"]
solana = [
    "dep:solana-sdk",
    "dep:solana-client",
    "dep:solana-program",
    "dep:solana-secp256k1-program",
    "dep:borsh",
    "dep:solana-chess-client",
    "dep:xfchess-game",
]
# Braid-Iroh P2P mode without Solana dependencies
braid-i = []

[profile.dev-optimized]
inherits = "dev"
opt-level = 1           # Basic optimizations for faster runtime while maintaining fast compile
codegen-units = 256     # More codegen units for better parallelism
lto = false             # Disable LTO for faster builds
incremental = true      # Enable incremental compilation
debug = true            # Keep debug symbols
panic = "unwind"        # Use unwind for better debuggability

[profile.release-optimized]
inherits = "release"
opt-level = 3           # Full optimizations
codegen-units = 1       # Single codegen unit for better optimization
lto = "thin"            # Thin LTO for a balance of speed and optimization
strip = true            # Strip symbols for smaller binary
panic = "abort"         # Abort on panic for smaller binary

[profile.release]
overflow-checks = true  # Required for Anchor builds

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["trilltino"]
publish = false
license = "MIT/Apache-2.0"

[workspace.dependencies]
# Standard dependencies
bevy = { version = "0.18.0", default-features = false, features = ["default", "webgl2", "mp3", "bevy_gltf"] }
bevy_sprite = "0.18.0"
bevy_text = "0.18.0"
bevy_ui = "0.18.0"
bevy_water = "0.18.1"
bevy_egui = "0.39.1"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rand = "0.9"
shakmaty = "0.30.0"
thiserror = "2.0.18"
anyhow = "1.0.102"
futures-lite = "2.6.1"
async-trait = "0.1.89"
uuid = { version = "1.21.0", features = ["v4", "fast-rng"] }
tracing = "0.1.44"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
bs58 = "0.5.1"
crossbeam-channel = "0.5.15"
web-time = "1.1"
chrono = { version = "0.4.38", features = ["serde"] }
serde_bytes = "0.11.15"

# Solana (compatible with anchor-lang 0.32.1)
solana-sdk = "2.2.1"
solana-client = "2.2.1"
solana-program = "2.2.1"
solana-secp256k1-program = "2.2.3"
borsh = "1.5.1"
ephemeral-rollups-sdk = "0.8.5"

# iroh dependencies
iroh = "0.96.1"
iroh-base = "0.96.1"

# Internal Workspace Crates
braid-blob = { path = "crates/braid-blob" }
braid-core = { path = "crates/braid-core" }
braid-http = { path = "crates/braid-http" }
braid-iroh = { path = "crates/braid-iroh" }
braid_uri = { path = "crates/braid_uri" }
chess_engine = { path = "crates/chess_engine" }
iroh-gossip = { path = "crates/iroh-gossip" }
shared = { path = "crates/shared" }
solana-chess-client = { path = "crates/solana-chess-client" }
braid_stockfish_ai = { path = "crates/braid_stockfish_ai" }
xfchess-game = { path = "programs/xfchess-game" }

[dependencies]
bevy.workspace = true
bevy_egui.workspace = true
bevy_sprite = { workspace = true }
bevy_text = { workspace = true }
bevy_ui = { workspace = true }
shakmaty.workspace = true
tokio.workspace = true
futures-lite.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
directories = "6.0.0"
tracing.workspace = true
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid.workspace = true
web-time.workspace = true
reqwest.workspace = true
solana-sdk = { workspace = true, optional = true }
solana-client = { workspace = true, optional = true }
webbrowser = "1.1.0"
bevy_water = { workspace = true }
braid_uri.workspace = true
braid-iroh.workspace = true
braid-core.workspace = true
iroh-gossip.workspace = true
solana-chess-client = { workspace = true, optional = true }
xfchess-game = { workspace = true, optional = true }
sha2 = "0.10.8"
dirs = "5.0.1"
chrono.workspace = true
serde_bytes.workspace = true
solana-secp256k1-program = { workspace = true, optional = true }
openssl = { version = "0.10", features = ["vendored"] }
shared.workspace = true
iroh.workspace = true
crossbeam-channel.workspace = true
thiserror.workspace = true
solana-program = { workspace = true, optional = true }
bs58.workspace = true
borsh = { workspace = true, optional = true }
anyhow = { workspace = true }
bincode = "1.3.3"
