[package]
name = "xfchess"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xfchess"
path = "src/main.rs"
test = false

[[bin]]
name = "pda"
path = "src/bin/pda.rs"
required-features = ["solana"]

[[bin]]
name = "read_game"
path = "src/bin/read_game.rs"
required-features = ["solana"]

[[bin]]
name = "tournament_test"
path = "src/bin/tournament_test.rs"
required-features = ["solana"]

[[bin]]
name = "tournament_real_test"
path = "src/bin/tournament_real_test.rs"
required-features = ["solana"]

[[bin]]
name = "tournament_data_gen"
path = "src/bin/tournament_data_gen.rs"
required-features = ["solana"]

[[bin]]
name = "debugger"
path = "src/bin/debugger.rs"


[workspace]
resolver = "2"
members = [
    "crates/zarathustra_net/*",
    "crates/solana/*",
    "crates/engine/*",
    "crates/shared/*",
    "programs/*",
    "tauri",
]
exclude = [
    "references/ephemeral-rollups-sdk/rust",
    "crates/solana/solana-contract-fuzzer",
]

[profile.dev]
opt-level = 1
debug = 1        # Only include line numbers, not full symbols (saves GBs of disk space)
strip = "debuginfo" # Strip debuginfo from the resulting binary (reduces .exe size)

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Compile build scripts and proc-macros optimized so they *run* faster during
# every compile (Bevy / Anchor / serde / sqlx are heavily macro-driven). This
# speeds up build time and has no effect on the final runtime binary.
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3

[profile.release]
opt-level = 3
# Thin LTO: nearly the runtime perf of fat LTO but 2-4x faster to build — a big
# win for the on-VPS backend build and local release iteration.
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true

# Size-optimized profile for Solana program
[profile.release.package.xfchess-game]
opt-level = "z"
codegen-units = 1


[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["trilltino"]
publish = false
license = "MIT/Apache-2.0"
repository = "https://github.com/trilltino/XFChess"
documentation = "https://github.com/trilltino/XFChess"
homepage = "https://github.com/trilltino/XFChess"
keywords = ["solana", "chess", "gaming"]

[workspace.dependencies]
anchor-lang = { version = "=0.31.1", features = ["init-if-needed"] }
anchor-spl = "=0.31.1"
solana-program = "=2.2.1"
solana-program-test = "=2.2.1"
solana-sdk = "=2.2.1"
solana-client = "=2.2.1"
borsh = "=1.5.7"
chrono = { version = "=0.4.44", features = ["serde"] }
serde_bytes = "=0.11.17"
clap = { version = "=4.5", features = ["derive", "env"] }
egui = "=0.29"
sdk = { package = "solana-sdk", version = "=2.2.1" }
rpc = { package = "solana-rpc-client", version = "=2.2.1" }
rpc-api = { package = "solana-rpc-client-api", version = "=2.2.1" }
iroh = "=0.96.1"
iroh-base = "=0.96.1"
bevy_egui = "=0.39.1"

webbrowser = "=1.0"
xfchess-game = { path = "programs/xfchess-game", version = "0.1.0" }
braid-core = { path = "crates/zarathustra_net/braid-core" }
braid-http = { path = "crates/zarathustra_net/braid-http" }
braid-iroh = { path = "crates/zarathustra_net/braid-iroh" }
braid_uri = { path = "crates/zarathustra_net/braid_uri" }
iroh-gossip = { path = "crates/zarathustra_net/iroh-gossip" }
shared = { path = "crates/shared/shared" }
solana-chess-client = { path = "crates/solana/solana-chess-client" }
nimzovich_engine = { path = "crates/engine/nimzovich_engine" }
xfchess-anticheat = { path = "crates/shared/xfchess-anticheat" }
braid_stockfish_ai = { path = "crates/braid_stockfish_ai" }
chess-logic-on-chain = { path = "crates/solana/chess-logic-on-chain" }
magic-resolver = { version = "0.2.0" }
bevy = { version = "=0.18.1", default-features = false, features = ["default", "webgl2", "mp3", "bevy_gltf", "jpeg"] }
bevy_sprite = "=0.18.1"
bevy_text = "=0.18.1"
bevy_ui = "=0.18.1"
image = { version = "=0.25.5", default-features = false, features = ["png"] }
tokio = { version = "=1.50.0", features = ["full"] }
tokio-tungstenite = "=0.20.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
bincode = "=1.3.3"
json = { package = "sonic-rs", version = "=0.3" }
futures = "=0.3"
parking_lot = "=0.12"
url = { version = "=2.5", features = ["serde"] }
websocket = { package = "tokio-websockets", version = "=0.10", features = ["client", "simd", "native-tls", "fastrand", "openssl"] }
humantime = "=2.1"
base64 = "=0.22"
zstd = "=0.13"
scc = "=2.2.5"
smallvec = { version = "=1.13", features = ["serde"] }
magic-domain-program = { version = "=0.2.0" }
rand = "=0.9"
regex = "=1.12.3"
thiserror = "=2.0.18"
anyhow = "=1.0.102"
futures-lite = "=2.6.1"
async-trait = "=0.1.89"
uuid = { version = "=1.21.0", features = ["v4", "fast-rng"] }
tracing = "=0.1.44"
tracing-subscriber = "=0.3.22"
reqwest = { version = "=0.13.2", features = ["json", "blocking"] }
bs58 = "=0.5.1"
crossbeam-channel = "=0.5.15"
web-time = "=1.1"

[features]
default = []
profile = ["bevy/trace_tracy"]
# Accept unsigned (0x01) P2P gossip messages. DEV/TEST ONLY — the default
# build rejects unsigned moves so a peer cannot skip authentication by
# sending plaintext. See docs/plans/causal-authentication.md (Gap A3).
allow-unsigned-p2p = []
# TempleOS tribute board theme (orthographic camera, unlit board, Terry Davis
# quote). DEV ONLY — compiled out of default builds; enables the main-menu entry.
templeos = []
solana = [
    "anchor-lang",
    "solana-sdk",
    "solana-client",
    "solana-chess-client",
    "solana-program",
    "ephemeral-rollups-sdk",
    "xfchess-game",
]

[dependencies]
bevy.workspace = true
bevy_sprite = { workspace = true }
bevy_text = { workspace = true }
bevy_ui = { workspace = true }
image = { workspace = true }
tokio.workspace = true
futures-lite.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
directories = "6.0.0"
tracing.workspace = true
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid.workspace = true
web-time.workspace = true
reqwest.workspace = true
anchor-lang = { workspace = true, optional = true }
nimzovich_engine = { workspace = true }
bevy_egui = { workspace = true }
solana-sdk = { workspace = true, optional = true }
solana-client = { workspace = true, optional = true }
webbrowser = "1.1.0"
braid_uri.workspace = true
braid-iroh = { workspace = true, features = ["proxy"] }
braid-core.workspace = true
iroh-gossip.workspace = true
solana-chess-client = { workspace = true, optional = true }
sha2 = "0.10.8"
aes-gcm = "0.10.3"
dirs = "5.0.1"
chrono.workspace = true
serde_bytes.workspace = true
openssl = { version = "0.10", features = ["vendored"] }
rfd = "0.15"
iroh.workspace = true
crossbeam-channel.workspace = true
thiserror.workspace = true
solana-program = { workspace = true, optional = true }
bs58.workspace = true
borsh.workspace = true
anyhow = { workspace = true }
clap.workspace = true
egui.workspace = true
bincode.workspace = true
zstd.workspace = true
futures = { workspace = true }
base64.workspace = true
regex.workspace = true
magic-resolver = { workspace = true, optional = true }
ed25519-dalek = "2"
ephemeral-rollups-sdk = { version = "0.8.5", features = ["anchor"], optional = true }
xfchess-game = { workspace = true, optional = true }
backend-types = { path = "crates/shared/backend-types" }

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }
