[package]
name = "backend"
version = "0.1.0"
edition = "2021"



[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "signing-server"
path = "src/signing_server.rs"

[[bin]]
name = "vps_admin"
path = "src/bin/vps_admin.rs"

[[bin]]
name = "tournament_admin"
path = "src/bin/tournament_admin.rs"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
argon2 = "0.5.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chrono = { version = "0.4.38", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "uuid",
    "chrono",
] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }

rand = "0.9"
dotenv = "0.15.0"
bincode = "1.3.3"
base64 = "0.22.1"
sha2 = "0.10"
bs58 = "0.5"
anyhow = "1.0.75"

# Braid/Iroh dependencies
braid-iroh = { path = "../crates/braid-iroh" }
iroh-gossip = { path = "../crates/iroh-gossip" }
braid-core = { path = "../crates/braid-core" }
braid_uri = { path = "../crates/braid_uri" }

# Solana dependencies
solana-sdk = "2.2.1"
solana-client = "2.2.1"
aes-gcm = "0.10.3"
hex = "0.4.3"
reqwest = { version = "0.13.2", features = ["json"] }
regex = "1.11"

# PDF generation for welcome emails
printpdf = "0.7"

# Swiss pairing engine
swiss-pairing = { path = "../crates/swiss-pairing", features = ["network"] }

# Global state for anti-cheat
once_cell = "1.19"

# Error handling
thiserror = "2.0.18"

[dev-dependencies]
serde_json = "1.0"
wiremock = "0.6"
tower = { version = "0.4", features = ["util"] }
tempfile = "3.8"
