[package]
name = "backend"
version = "0.1.0"
edition = "2021"



[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "signing-server"
path = "src/signing_server.rs"

# Deploy/prod alias: the systemd unit, deploy scripts and CI all build/run
# `signing-server-http`. It is the same maintained server as `signing-server`.
[[bin]]
name = "signing-server-http"
path = "src/signing_server.rs"

[[bin]]
name = "vps_admin"
path = "src/bin/vps_admin.rs"

[[bin]]
name = "tournament_admin"
path = "src/bin/tournament_admin.rs"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
serde = { version = "1.0.228", features = ["derive"] }
bcrypt = { version = "=0.15.0", features = [] }
serde_json = "1.0.149"
argon2 = "0.5.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chrono = { version = "0.4.44", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "uuid",
    "chrono",
] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }

rand = "0.9"
dotenv = "0.15.0"
bincode = "1.3.3"
base64 = "0.22.1"
sha2 = "0.10"
bs58 = "0.5"
anyhow = "1.0.75"
borsh = "=1.5.7"

# Braid/Iroh dependencies
braid-iroh = { path = "../crates/zarathustra_net/braid-iroh" }
iroh-gossip = { path = "../crates/zarathustra_net/iroh-gossip" }
braid-core = { path = "../crates/zarathustra_net/braid-core" }
braid_uri = { path = "../crates/zarathustra_net/braid_uri" }

# Solana dependencies
solana-sdk = "=2.2.1"
solana-client = "=2.2.1"
aes-gcm = "0.10.3"
hex = "0.4.3"
reqwest = { version = "0.13.2", features = ["json", "blocking", "form"] }
regex = "1.12.3"
urlencoding = "2.1"

# PDF generation for welcome emails
printpdf = "0.7"

# Chess engine for SAN generation
nimzovich_engine = { path = "../crates/engine/nimzovich_engine", features = ["std", "search"] }

# Anti-cheat analysis engine
xfchess-anticheat = { path = "../crates/shared/xfchess-anticheat" }

# Swiss pairing engine
swiss-pairing = { path = "../crates/shared/swiss-pairing", features = ["network"] }

# Braid HTTP-209 subscribe server
xfchess-braid-server = { path = "../crates/zarathustra_net/xfchess-braid-server" }

# Global state for anti-cheat
once_cell = "1.19"

# PGN compression
zstd = "0.13"

# Error handling
thiserror = "2.0.18"

# WebSocket subscriber
tokio-tungstenite = "0.20.1"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"
async-stream = "0.3"

[features]
default = ["ws_subscriber"]
ws_subscriber = []
polling = []

[dev-dependencies]
serde_json = "1.0"
wiremock = "0.6"
tower = { version = "0.4", features = ["util"] }
tempfile = "3.8"
# In-process HTTP E2E harness (backend/tests/e2e_api.rs)
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
axum = "0.8.8"
solana-sdk = "=2.2.1"
