[package]
name = "backend"
version = "0.1.0"
edition = "2021"



[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "signing-server"
path = "src/signing_server.rs"

# Deploy/prod alias: the systemd unit, deploy scripts and CI all build/run
# `signing-server-http`. It is the same maintained server as `signing-server`.
[[bin]]
name = "signing-server-http"
path = "src/signing_server_http.rs"

[[bin]]
name = "vps_admin"
path = "src/bin/vps_admin.rs"

[[bin]]
name = "tournament_admin"
path = "src/bin/tournament_admin.rs"

[[bin]]
name = "import_puzzles"
path = "src/bin/import_puzzles.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "request-id", "propagate-header", "util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
argon2 = "0.5.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chrono = { version = "0.4.44", features = ["serde"] }
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "sqlite",
    "uuid",
    "chrono",
] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }

rand = "0.10"
dotenv = "0.15.0"
bincode = "1.3.3"
base64 = "0.22.1"
sha2 = "0.10"
bs58 = "0.5"
anyhow = "1.0.75"
borsh = { workspace = true }

# Braid/Iroh dependencies
braid-iroh = { path = "../crates/zarathustra_net/braid-iroh" }
iroh-gossip = { path = "../crates/zarathustra_net/iroh-gossip" }
braid_chess = { path = "../crates/zarathustra_net/braid_chess" }

# Solana dependencies
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-system-interface = { version = "3", features = ["bincode"] }
solana-commitment-config = "3"
aes-gcm = "0.10.3"
hex = "0.4.3"
reqwest = { version = "0.13.4", features = ["json", "blocking", "form"] }
regex = "1.12.3"
urlencoding = "2.1"

# Chess engine for SAN generation
nimzovich_engine = { path = "../crates/engine/nimzovich_engine", features = ["std", "search"] }

# Anti-cheat analysis engine
xfchess-anticheat = { path = "../crates/shared/xfchess-anticheat" }

# Swiss pairing engine
swiss-pairing = { path = "../crates/shared/swiss-pairing", features = ["network"] }

# Braid HTTP-209 subscribe server
xfchess-braid-server = { path = "../crates/zarathustra_net/xfchess-braid-server" }

# Global state for anti-cheat
once_cell = "1.19"

# PGN compression
zstd = "0.13"

# Lichess puzzle CSV import (import_puzzles binary)
csv = "1"

# Error handling
thiserror = "2.0.18"

# WebSocket subscriber
tokio-tungstenite = "0.20.1"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"
async-stream = "0.3"

[features]
default = ["ws_subscriber"]
ws_subscriber = []
polling = []

[dev-dependencies]
serde_json = "1.0"
wiremock = "0.6"
tower = { version = "0.4", features = ["util"] }
tempfile = "3.8"
# In-process HTTP E2E harness (backend/tests/e2e_api.rs)
tokio = { workspace = true }
axum = { workspace = true }
solana-sdk = { workspace = true }
