[package]
name = "xfchess-tauri"
version = "0.1.0"
edition = "2021"
description = "XFChess Tauri wrapper — wallet adapter + native game launcher"

[dependencies]
base64 = "0.22"
bs58 = "0.5"
tauri = { version = "2", features = ["devtools"] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["http1", "json"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
open = "5"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
backend = { path = "../backend" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
