[package]
name = "xfchess-tauri"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "XFChess Tauri wrapper — wallet adapter + native game launcher"
authors = ["XFChess Team"]
homepage = "https://xfchess.com"
repository = "https://github.com/xfchess/xfchess"
license = "MIT OR Apache-2.0"
categories = ["gui", "web-programming", "games"]

[features]
default = []
dev = []
production = []
wallet = []
tournament-admin = []
all = ["dev", "wallet", "tournament-admin"]

[dependencies]
base64 = "0.22"
tauri = { version = "2.11", features = ["devtools", "unstable"] }
tauri-build = { version = "2.6", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["http1", "json"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
open = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

# default to small, optimized workspace release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true

[dev-dependencies]
tokio-test = "0.4"
