[package]
name = "xfchess-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
console_log = "1.0"
log = "0.4"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4"
# Explicitly depend on getrandom 0.3 to ensure we use a compatible version
getrandom = { version = "0.3", features = ["wasm_js"] }
# Also force "js" feature on getrandom 0.2 (used by transitive deps like rand 0.8)
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
] }
bevy = { version = "0.17.3", features = ["web", "webgl2"] }
bevy_egui = { version = "0.37", default-features = false }
bevy-inspector-egui = { version = "0.34", default-features = false }
xfchess = { path = "..", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3"
