[package]
name = "xfchess-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true

[dependencies]
leptos = { version = "0.8.15", features = ["csr"] }
console_log = "1.0"
log = "0.4"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4"
# Force JS features on getrandom for WASM compatibility
getrandom02 = { package = "getrandom", version = "0.2.15", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
] }
bevy = { version = "0.17.3", features = ["web", "webgl2"] }
bevy_egui = { version = "0.38.1", default-features = false }
bevy-inspector-egui = "0.35.0"
xfchess = { path = "..", default-features = false }
web-time = "1.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
