[package]
name = "xfchess-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true

[dependencies]
leptos = { version = "0.8.16", features = ["csr"] }
console_log = "1.0"
log = "0.4"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.111"
wasm-bindgen-futures = "0.4"
# Force JS features on getrandom for WASM compatibility
getrandom02 = { package = "getrandom", version = "0.2.17", features = ["js"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
] }
bevy = { workspace = true, features = ["web"] }
bevy_egui = { workspace = true, default-features = false }
xfchess = { path = "..", default-features = false }
web-time = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
