[package]
name = "braid-core"
version = "0.1.4"
edition = "2021"
publish = false

[features]
default = ["client", "serde", "smallvec", "native"]
native = [
    "dep:tokio",
    "tokio?/full",
    "dep:reqwest",
    "dep:parking_lot",
]
server = [
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "native",
    "dep:headers",
    "dep:tokio-stream",
    "tokio-stream?/net",
    "serde",
    "smallvec",
]
client = ["serde", "smallvec"]
smallvec = ["dep:smallvec"]
serde = []
lz4 = ["dep:lz4_flex"]
storage = []
gen_test_data = ["lz4"]
fuzzing = []
stats = []
wchar_conversion = []
merge_conflict_checks = []
dot_export = []

[dependencies]
tokio = { workspace = true, optional = true }
tokio-stream = { version = "0.1", optional = true }
http = "1.0"

axum = { version = "0.8.8", optional = true }
headers = { version = "0.4", optional = true }
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6.8", optional = true }

serde = { workspace = true }
serde_json = { workspace = true }

futures = { workspace = true }
async-stream = "0.3"
async-trait = { workspace = true }
async-channel = "2.3"

bytes = { version = "1.11.1", features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde", "js"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true, optional = true }
base64 = { workspace = true }
url = { workspace = true }
once_cell = "1.18"
chrono = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
percent-encoding = "2.3"
lazy_static = "1.4.0"
smallvec = { version = "1.15.1", features = ["serde"], optional = true }
lz4_flex = { version = "0.12.0", optional = true }
smartstring = { version = "1.0.1", features = ["serde"] }
str_indices = "0.4.3"
bumpalo = { version = "3.16.0", features = ["collections"] }
jumprope = "1.1.2"
humansize = "2.0.0"
num_enum = "0.7.2"
crc = "3.0.0"
libc = "0.2.139"

reqwest = { workspace = true, features = ["json", "stream", "hickory-dns"], optional = true }
sha2 = "0.10.9"
braid-http = { path = "../braid-http" }

[dev-dependencies]
lz4_flex = "0.12.0"
tempfile = "3.10"
