[package]
name = "braid-http"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
async-channel = "2.3"
uuid = { workspace = true, features = ["v4", "serde"] }
bytes = { version = "1", features = ["serde"] }
tracing = { workspace = true }
url = { workspace = true }
percent-encoding = "2.3"
rand = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
once_cell = "1.18"
http = "1"
sfv = "0.14"
gloo-timers = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = ["native"]
native = []
wasm = ["dep:gloo-timers", "dep:wasm-bindgen-futures", "dep:js-sys"]
fuzzing = []

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
