[package]
name = "braid-iroh"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
proxy = ["dep:axum", "dep:tower", "dep:tower-http"]

[dependencies]
iroh = { version = "0.96.1", features = ["test-utils"] }
n0-future = "0.3.2"
iroh-gossip = { path = "../iroh-gossip", features = ["net"] }

braid-core = { path = "../braid-core", features = ["client", "serde"] }

axum = { version = "0.8", features = ["ws"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"], optional = true }
http = "1"

tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
bytes = "1"

blake3 = "1"

tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }
rand = { workspace = true }

[dev-dependencies]
rand = "0.10"
